--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -2,6 +2,12 @@
   "translation": {
     "login_google": "Prisijungti per Google",
     "login_facebook": "Prisijungti per Facebook",
-    "OR": "ARBA"
+    "OR": "ARBA",
+    "username": "Vartotojo vardas",
+    "password": "Slaptažodis",
+    "name_required_error": "Vartotojo vardas privalomas",
+    "password_required_error": "Slaptažodis privalomas",
+    "login": "Prisijungti",
+    "signed_in_as" : "Prisijungęs"
   }
 }
