--- a/src/utils/i18n/translations/ru.json
+++ b/src/utils/i18n/translations/ru.json
@@ -40,6 +40,7 @@
     "create_card" : "Create card",
     "edit_card" : "Edit card",
     "required_card_id" : "Card ID is required",
-    "required_code" : "Code is required"
+    "required_code" : "Code is required",
+    "edit": "Edit"
   }
 }
