--- a/src/utils/i18n/translations/ru.json
+++ b/src/utils/i18n/translations/ru.json
@@ -43,6 +43,8 @@
     "required_pin_code" : "PIN code is required",
     "edit": "Edit",
     "change": "Change",
-    "phone_number": "Phone number"
+    "phone_number": "Phone number",
+    "phone_number_required" : "Phone number is required",
+    "phone_number_invalid": "Phone number is not valid"
   }
 }
