--- a/src/utils/i18n/translations/en.json
+++ b/src/utils/i18n/translations/en.json
@@ -45,6 +45,9 @@
     "change": "Change",
     "phone_number": "Phone number",
     "phone_number_required" : "Phone number is required",
-    "phone_number_invalid": "Phone number is not valid"
+    "phone_number_invalid": "Phone number is not valid",
+    "required_password" : "Password is required",
+    "password_min_length" : "Password should contain at least 8 characters",
+    "new_password" : "New password"
   }
 }
