--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -45,6 +45,9 @@
     "change": "Keisti",
     "phone_number": "Telefono numeris",
     "phone_number_required" : "Telefono numeris privalomas",
-    "phone_number_invalid": "Telefono numeris neteisingas"
+    "phone_number_invalid": "Telefono numeris neteisingas",
+    "required_password" : "Slaptažodis privalomas",
+    "password_min_length" : "Slaptažodį turi sudaryti bent 8 simboliai",
+    "new_password" : "Naujas slaptažodis"
   }
 }
