save before client confirms BE data structure

--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -10,10 +10,9 @@
     "login": "Prisijungti",
     "welcome": "Sveiki atvykę į <0>išmaniųjų</0> domofonų savitarną",
     "profile": "Profilis",
-    "members" : "Nariai",
+    "members" : "Šeimos nariai",
     "equipment": "Įranga",
     "email": "El. paštas",
-    "telephone": "Tel. numeris",
     "pin": "Mano PIN",
     "family_members": "Šeimos nariai",
     "my_cards": "Mano kortelės",
@@ -23,7 +22,7 @@
     "change_contacts": "Keisti kontaktinę informaciją",
     "change_password": "Keisti slaptažodį",
     "assigned_cards" : "Priskirtos kortelės",
-    "card_id": "Kortelės ID",
+    "card_number": "Kortelės numeris",
     "pin_code": "PIN kodas",
     "status": "Būsena",
     "actions": "Veiksmai",
@@ -39,10 +38,12 @@
     "create" : "Sukurti",
     "create_card" : "Sukurti kortelę",
     "edit_card" : "Redaguoti kortelę",
-    "required_card_id" : "Kortelės ID privalomas",
+    "required_card_number" : "Kortelės numeris privalomas",
     "required_pin_code" : "PIN kodas privalomas",
     "edit": "Redaguoti",
     "change": "Keisti",
+    "name": "Vardas",
+    "name_required": "Vardas privalomas",
     "phone_number": "Telefono numeris",
     "phone_number_required" : "Telefono numeris privalomas",
     "phone_number_invalid": "Telefono numeris neteisingas",
