--- a/src/utils/i18n/translations/en.json
+++ b/src/utils/i18n/translations/en.json
@@ -10,10 +10,9 @@
     "login": "Login",
     "welcome": "Welcome to <0>smart</0> intercoms",
     "profile": "Profile",
-    "members" : "Members",
+    "members" : "Family members",
     "equipment": "Equipment",
     "email": "E-mail",
-    "telephone": "Phone number",
     "pin": "My PIN",
     "family_members": "Family members",
     "my_cards": "My cards",
@@ -43,6 +42,8 @@
     "required_pin_code" : "PIN code is required",
     "edit": "Edit",
     "change": "Change",
+    "name": "Name",
+    "name_required": "Name is required",
     "phone_number": "Phone number",
     "phone_number_required" : "Phone number is required",
     "phone_number_invalid": "Phone number is not valid",
