--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -8,10 +8,12 @@
     "name_required_error": "Vartotojo vardas privalomas",
     "password_required_error": "Slaptažodis privalomas",
     "login": "Prisijungti",
+    "logout": "Atsijungti",
     "welcome": "Sveiki atvykę į <0>išmaniųjų</0> domofonų savitarną",
     "profile": "Profilis",
-    "members" : "Šeimos nariai",
-    "equipment": "Įranga",
+    "members" : "Vartotojai",
+    "equipment": "Įrenginių statusas",
+    "access": "Įeigos scenarijai",
     "email": "El. paštas",
     "pin": "Mano PIN",
     "family_members": "Šeimos nariai",
@@ -63,6 +65,7 @@
     "error": "Klaida",
     "page_not_found": "Puslapis neegzistuoja",
     "nothing_found_message": "Puslapis, kurio ieškote, gali būti pašalintas, jo pavadinimas buvo pakeistas arba jis laikinai nepasiekiamas",
-    "return_to_homepage": "Grįžti į pradinį puslapį"
+    "return_to_homepage": "Grįžti į pradinį puslapį",
+    "feature_is_in_development": "Funkcija kuriama"
   }
 }
