--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -19,7 +19,7 @@
     "family_members": "Šeimos nariai",
     "my_cards": "Mano kortelės",
     "my_privileges": "Mano durų teisės",
-    "change_pin_code": "Keisti PIN kodą",
+    "change_pin_code": "Keisti PIN",
     "add_cards": "Pridėti kortelių",
     "change_contacts": "Keisti kontaktinę informaciją",
     "change_password": "Keisti slaptažodį",
