--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -66,6 +66,7 @@
     "page_not_found": "Puslapis neegzistuoja",
     "nothing_found_message": "Puslapis, kurio ieškote, gali būti pašalintas, jo pavadinimas buvo pakeistas arba jis laikinai nepasiekiamas",
     "return_to_homepage": "Grįžti į pradinį puslapį",
-    "feature_is_in_development": "Funkcija kuriama"
+    "feature_is_in_development": "Funkcija kuriama",
+    "password_changed": "Slaptažodis pakeistas!"
   }
 }
