doors access view

--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -11,7 +11,7 @@
     "logout": "Atsijungti",
     "welcome": "Sveiki atvykę į <0>išmaniųjų</0> domofonų savitarną",
     "profile": "Profilis",
-    "members" : "Vartotojai",
+    "members": "Vartotojai",
     "equipment": "Įrenginių statusas",
     "access": "Įeigos scenarijai",
     "email": "El. paštas",
@@ -23,35 +23,37 @@
     "add_cards": "Pridėti kortelių",
     "change_contacts": "Keisti kontaktinę informaciją",
     "change_password": "Keisti slaptažodį",
-    "assigned_cards" : "Priskirtos kortelės",
+    "assigned_cards": "Priskirtos kortelės",
     "card_number": "Kortelės numeris",
     "pin_code": "PIN kodas",
     "status": "Būsena",
     "actions": "Veiksmai",
-    "add_new_card" : "Pridėti naują kortelę",
+    "add_new_card": "Pridėti naują kortelę",
     "title": "Pavadinimas",
     "model": "Modelis",
     "type": "Tipas",
+    "project": "Projektas",
+    "note": "Užrašas",
     "delete_card": "Ištrinti šią kortelę?",
     "delete": "Ištrinti",
-    "cancel" : "Atšaukti",
+    "cancel": "Atšaukti",
     "no_equipments": "Nėra įrangos",
-    "no_members" : "Nėra narių",
-    "create" : "Sukurti",
-    "create_card" : "Sukurti kortelę",
-    "edit_card" : "Redaguoti kortelę",
-    "required_card_number" : "Kortelės numeris privalomas",
-    "required_pin_code" : "PIN kodas privalomas",
+    "no_members": "Nėra narių",
+    "create": "Sukurti",
+    "create_card": "Sukurti kortelę",
+    "edit_card": "Redaguoti kortelę",
+    "required_card_number": "Kortelės numeris privalomas",
+    "required_pin_code": "PIN kodas privalomas",
     "edit": "Redaguoti",
     "change": "Keisti",
     "name": "Vardas",
     "name_required": "Vardas privalomas",
     "phone_number": "Telefono numeris",
-    "phone_number_required" : "Telefono numeris privalomas",
+    "phone_number_required": "Telefono numeris privalomas",
     "phone_number_invalid": "Telefono numeris neteisingas",
-    "required_password" : "Slaptažodis privalomas",
-    "password_min_length" : "Slaptažodį turi sudaryti bent 8 simboliai",
-    "new_password" : "Naujas slaptažodis",
+    "required_password": "Slaptažodis privalomas",
+    "password_min_length": "Slaptažodį turi sudaryti bent 8 simboliai",
+    "new_password": "Naujas slaptažodis",
     "what_happened": "Kas nutiko?",
     "what_happened_placeholder": "Papasakokite mums kas nutiko",
     "comments_required_error": "Reikalinga informacija",
