--- a/src/utils/i18n/translations/en.json
+++ b/src/utils/i18n/translations/en.json
@@ -11,7 +11,7 @@
     "logout": "Logout",
     "welcome": "Welcome to <0>smart</0> intercoms",
     "profile": "Profile",
-    "members" : "Users",
+    "members": "Users",
     "equipment": "Equipment statuses",
     "access": "Access scenarios",
     "email": "E-mail",
@@ -23,35 +23,37 @@
     "add_cards": "Add cards",
     "change_contacts": "Change contact information",
     "change_password": "Change password",
-    "assigned_cards" : "Assigned cards",
+    "assigned_cards": "Assigned cards",
     "card_id": "Card ID",
     "pin_code": "PIN code",
     "status": "Status",
     "actions": "Actions",
-    "add_new_card" : "Add new card",
+    "add_new_card": "Add new card",
     "title": "Title",
     "model": "Model",
     "type": "Type",
+    "project": "Project",
+    "note": "Note",
     "delete_card": "Delete current card?",
     "delete": "Delete",
-    "cancel" : "Cancel",
+    "cancel": "Cancel",
     "no_equipments": "No equipment",
-    "no_members" : "No members",
-    "create" : "Create",
-    "create_card" : "Create card",
-    "edit_card" : "Edit card",
-    "required_card_id" : "Card ID is required",
-    "required_pin_code" : "PIN code is required",
+    "no_members": "No members",
+    "create": "Create",
+    "create_card": "Create card",
+    "edit_card": "Edit card",
+    "required_card_id": "Card ID is required",
+    "required_pin_code": "PIN code is required",
     "edit": "Edit",
     "change": "Change",
     "name": "Name",
     "name_required": "Name is required",
     "phone_number": "Phone number",
-    "phone_number_required" : "Phone number is required",
+    "phone_number_required": "Phone number is required",
     "phone_number_invalid": "Phone number is not valid",
-    "required_password" : "Password is required",
-    "password_min_length" : "Password should contain at least 8 characters",
-    "new_password" : "New password",
+    "required_password": "Password is required",
+    "password_min_length": "Password should contain at least 8 characters",
+    "new_password": "New password",
     "what_happened": "What happened?",
     "what_happened_placeholder": "Tell us what happened",
     "comments_required_error": "Information is required",
