user place functionality

--- a/src/utils/i18n/translations/en.json
+++ b/src/utils/i18n/translations/en.json
@@ -33,6 +33,9 @@
     "model": "Model",
     "type": "Type",
     "project": "Project",
+    "address": "Address",
+    "house_number": "House no.",
+    "flat_number": "Flat no.",
     "note": "Note",
     "delete_card": "Delete current card?",
     "delete": "Delete",
