--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -33,6 +33,9 @@
     "model": "Modelis",
     "type": "Tipas",
     "project": "Projektas",
+    "address": "Adresas",
+    "house_number": "Namo nr.",
+    "flat_number": "Buto nr.",
     "note": "Užrašas",
     "delete_card": "Ištrinti šią kortelę?",
     "delete": "Ištrinti",
