users CRUD functionallity

--- a/src/utils/i18n/translations/en.json
+++ b/src/utils/i18n/translations/en.json
@@ -15,8 +15,11 @@
     "equipment": "Equipment statuses",
     "access": "Access scenarios",
     "email": "E-mail",
-    "pin": "My PIN",
-    "family_members": "Family members",
+    "pin": "PIN",
+    "is_active": "Active",
+    "is_owner": "Owner",
+    "users": "Users",
+    "user": "User",
     "my_cards": "My cards",
     "my_privileges": "My privileges",
     "change_pin_code": "Change PIN",
@@ -28,7 +31,6 @@
     "pin_code": "PIN code",
     "status": "Status",
     "actions": "Actions",
-    "add_new_card": "Add new card",
     "title": "Title",
     "model": "Model",
     "type": "Type",
@@ -37,20 +39,25 @@
     "house_number": "House no.",
     "flat_number": "Flat no.",
     "note": "Note",
-    "delete_card": "Delete current card?",
+    "delete_member": "Delete current user?",
+    "member_deleted": "User was deleted!",
+    "member_created": "User was created!",
+    "member_updated": "User data was updated!",
     "delete": "Delete",
     "cancel": "Cancel",
     "no_equipments": "No equipment",
     "no_members": "No members",
+    "no_doors_access": "You do not have access to any doors",
     "create": "Create",
-    "create_card": "Create card",
-    "edit_card": "Edit card",
+    "create_member": "Create user",
+    "edit_member": "Edit member",
     "required_card_id": "Card ID is required",
     "required_pin_code": "PIN code is required",
     "edit": "Edit",
     "change": "Change",
     "name": "Name",
     "name_required": "Name is required",
+    "phone": "Phone",
     "phone_number": "Phone number",
     "phone_number_required": "Phone number is required",
     "phone_number_invalid": "Phone number is not valid",
@@ -74,6 +81,7 @@
     "feature_is_in_development": "Feature is in development",
     "password_changed": "Password changed!",
     "internal_server_error": "Internal server error",
-    "technical_problem_message": "Our servers are facing a temporary technical problem. <p>We regret the inconvenience causes.</p><1>Please try again after some time</1>"
+    "technical_problem_message": "Our servers are facing a temporary technical problem. <p>We regret the inconvenience causes.</p><1>Please try again after some time</1>",
+    "add_new_user": "Add new user"
   }
 }
