--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -15,8 +15,11 @@
     "equipment": "Įrenginių statusas",
     "access": "Įeigos scenarijai",
     "email": "El. paštas",
-    "pin": "Mano PIN",
-    "family_members": "Šeimos nariai",
+    "pin": "PIN",
+    "is_active": "Aktyvus",
+    "is_owner": "Savininkas",
+    "users": "Vartotojai",
+    "user": "Vartotojas",
     "my_cards": "Mano kortelės",
     "my_privileges": "Mano durų teisės",
     "change_pin_code": "Keisti PIN",
@@ -28,7 +31,6 @@
     "pin_code": "PIN kodas",
     "status": "Būsena",
     "actions": "Veiksmai",
-    "add_new_card": "Pridėti naują kortelę",
     "title": "Pavadinimas",
     "model": "Modelis",
     "type": "Tipas",
@@ -37,20 +39,25 @@
     "house_number": "Namo nr.",
     "flat_number": "Buto nr.",
     "note": "Užrašas",
-    "delete_card": "Ištrinti šią kortelę?",
+    "delete_member": "Ištrinti šį vartotoją?",
+    "member_deleted": "Vartotojas ištrintas!",
+    "member_created": "Vartotojas sukurtas!",
+    "member_updated": "Vartotojo duomenys pakeisti!",
     "delete": "Ištrinti",
     "cancel": "Atšaukti",
     "no_equipments": "Nėra įrangos",
     "no_members": "Nėra narių",
+    "no_doors_access": "Jūs neturite prieigos prie jokių durų",
     "create": "Sukurti",
-    "create_card": "Sukurti kortelę",
-    "edit_card": "Redaguoti kortelę",
+    "create_member": "Sukurti vartotoją",
+    "edit_member": "Redaguoti vartotoją",
     "required_card_number": "Kortelės numeris privalomas",
     "required_pin_code": "PIN kodas privalomas",
     "edit": "Redaguoti",
     "change": "Keisti",
     "name": "Vardas",
     "name_required": "Vardas privalomas",
+    "phone": "Telefonas",
     "phone_number": "Telefono numeris",
     "phone_number_required": "Telefono numeris privalomas",
     "phone_number_invalid": "Telefono numeris neteisingas",
@@ -74,6 +81,7 @@
     "feature_is_in_development": "Funkcija kuriama",
     "password_changed": "Slaptažodis pakeistas!",
     "internal_server_error": "Vidinė serverio klaida",
-    "technical_problem_message": "Mūsų serveriai susiduria su laikina technine problema. <p>Mes apgailestaujame dėl nepatogumų.</p><1>Po kurio laiko bandykite dar kartą</1>"
+    "technical_problem_message": "Mūsų serveriai susiduria su laikina technine problema. <p>Mes apgailestaujame dėl nepatogumų.</p><1>Po kurio laiko bandykite dar kartą</1>",
+    "add_new_user": "Pridėti naują vartotoją"
   }
 }
