--- a/src/utils/i18n/translations/en.json
+++ b/src/utils/i18n/translations/en.json
@@ -46,7 +46,8 @@
     "delete": "Delete",
     "cancel": "Cancel",
     "no_equipments": "No equipment",
-    "no_members": "No members",
+    "no_members": "No users was found",
+    "no_member": "No user was found",
     "no_doors_access": "You do not have access to any doors",
     "create": "Create",
     "create_member": "Create user",
