--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -46,7 +46,8 @@
     "delete": "Ištrinti",
     "cancel": "Atšaukti",
     "no_equipments": "Nėra įrangos",
-    "no_members": "Nėra narių",
+    "no_members": "Nėra vartotojų",
+    "no_member": "Vartotojas nerastas",
     "no_doors_access": "Jūs neturite prieigos prie jokių durų",
     "create": "Sukurti",
     "create_member": "Sukurti vartotoją",
