owner role functionallity

--- a/src/utils/i18n/translations/en.json
+++ b/src/utils/i18n/translations/en.json
@@ -15,25 +15,38 @@
     "equipment": "Equipment statuses",
     "access": "Access scenarios",
     "email": "E-mail",
+    "email_required_error": "Email is required",
+    "email_format": "Email is not valid",
     "pin": "PIN",
+    "updated_pin": "Pin code was updated!",
+    "updated_contacts": "Contact information was updated!",
     "is_active": "Active",
     "is_owner": "Owner",
     "users": "Users",
     "user": "User",
-    "my_cards": "My cards",
+    "cards": "Cards",
+    "card_created": "Card was added!",
+    "card_deleted": "Card was deleted!",
+    "card_updated": "Card data was updated!",
+    "card_no": "Card number",
+    "card_no_length": "The card number must be 8 digits long",
+    "card_no_format": "Card number must be only digits",
+    "card_no_required": "Card number is required",
     "my_privileges": "My privileges",
     "change_pin_code": "Change PIN",
-    "add_cards": "Add cards",
+    "add_card": "Add card",
     "change_contacts": "Change contact information",
     "change_password": "Change password",
     "assigned_cards": "Assigned cards",
     "card_id": "Card ID",
     "pin_code": "PIN code",
+    "pin_format": "Pin code must be only digits",
     "status": "Status",
     "actions": "Actions",
     "title": "Title",
     "model": "Model",
     "type": "Type",
+    "type_required": "Type is required",
     "project": "Project",
     "address": "Address",
     "house_number": "House no.",
@@ -47,11 +60,15 @@
     "cancel": "Cancel",
     "no_equipments": "No equipment",
     "no_members": "No users was found",
+    "no_cards": "No cards was found",
     "no_member": "No user was found",
     "no_doors_access": "You do not have access to any doors",
     "create": "Create",
     "create_member": "Create user",
+    "create_card": "Create card",
+    "delete_card": "Delete this card?",
     "edit_member": "Edit member",
+    "edit_card": "Edit card",
     "required_card_id": "Card ID is required",
     "required_pin_code": "PIN code is required",
     "edit": "Edit",
