--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -15,15 +15,27 @@
     "equipment": "Įrenginių statusas",
     "access": "Įeigos scenarijai",
     "email": "El. paštas",
+    "email_required_error": "El. paštas privalomas",
+    "email_format": "El. pašto adresas neatitinka formato",
     "pin": "PIN",
+    "pin_format": "Pin kodas turi būti tik iš skaitmenų",
+    "updated_pin": "PIN kodas pakeistas!",
+    "updated_contacts": "Kontaktinė informacija pakeista!",
     "is_active": "Aktyvus",
     "is_owner": "Savininkas",
     "users": "Vartotojai",
     "user": "Vartotojas",
-    "my_cards": "Mano kortelės",
+    "cards": "Kortelės",
+    "card_created": "Kortelė pridėta!",
+    "card_deleted": "Kortelė ištrinta!",
+    "card_updated": "Kortelės duomenys pakeisti!",
+    "card_no": "Kortelės numeris",
+    "card_no_length": "Kortelės numeris turi būti 8 skaitmenų ilgio",
+    "card_no_format": "Kortelės numeris turi būti tik iš skaitmenų",
+    "card_no_required": "Kortelės numeris privalomas",
     "my_privileges": "Mano durų teisės",
     "change_pin_code": "Keisti PIN",
-    "add_cards": "Pridėti kortelių",
+    "add_card": "Pridėti kortelę",
     "change_contacts": "Keisti kontaktinę informaciją",
     "change_password": "Keisti slaptažodį",
     "assigned_cards": "Priskirtos kortelės",
@@ -34,6 +46,7 @@
     "title": "Pavadinimas",
     "model": "Modelis",
     "type": "Tipas",
+    "type_required": "Kortelės tipas privalomas",
     "project": "Projektas",
     "address": "Adresas",
     "house_number": "Namo nr.",
@@ -47,11 +60,15 @@
     "cancel": "Atšaukti",
     "no_equipments": "Nėra įrangos",
     "no_members": "Nėra vartotojų",
+    "no_cards": "Nėra priskirtų kortelių",
     "no_member": "Vartotojas nerastas",
     "no_doors_access": "Jūs neturite prieigos prie jokių durų",
     "create": "Sukurti",
     "create_member": "Sukurti vartotoją",
+    "create_card": "Sukurti kortelę",
+    "delete_card": "Ištrinti šią kortelę?",
     "edit_member": "Redaguoti vartotoją",
+    "edit_card": "Redaguoti kortelę",
     "required_card_number": "Kortelės numeris privalomas",
     "required_pin_code": "PIN kodas privalomas",
     "edit": "Redaguoti",
