changes for admin role

--- a/src/utils/i18n/translations/en.json
+++ b/src/utils/i18n/translations/en.json
@@ -10,8 +10,8 @@
     "logout": "Logout",
     "welcome": "Welcome to <0>smart</0> intercoms",
     "profile": "Profile",
-    "members": "Users",
-    "equipment": "Equipment statuses",
+    "members": "My users",
+    "other_members": "Other users",
     "access": "Access scenarios",
     "email": "E-mail",
     "email_required_error": "Email is required",
@@ -21,7 +21,7 @@
     "updated_contacts": "Contact information was updated!",
     "is_active": "Active",
     "is_owner": "Owner",
-    "users": "Users",
+    "users": "Apartment users",
     "user": "User",
     "cards": "Cards",
     "card_created": "Card was added!",
