--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -10,8 +10,8 @@
     "logout": "Atsijungti",
     "welcome": "Sveiki atvykę į <0>išmaniųjų</0> domofonų savitarną",
     "profile": "Profilis",
-    "members": "Vartotojai",
-    "equipment": "Įrenginių statusas",
+    "members": "Mano vartotojai",
+    "other_members": "Kiti vartotojai",
     "access": "Įeigos scenarijai",
     "email": "El. paštas",
     "email_required_error": "El. paštas privalomas",
@@ -22,7 +22,7 @@
     "updated_contacts": "Kontaktinė informacija pakeista!",
     "is_active": "Aktyvus",
     "is_owner": "Savininkas",
-    "users": "Vartotojai",
+    "users": "Butų vartotojai",
     "user": "Vartotojas",
     "cards": "Kortelės",
     "card_created": "Kortelė pridėta!",
@@ -57,7 +57,6 @@
     "member_updated": "Vartotojo duomenys pakeisti!",
     "delete": "Ištrinti",
     "cancel": "Atšaukti",
-    "no_equipments": "Nėra įrangos",
     "no_members": "Nėra vartotojų",
     "no_cards": "Nėra priskirtų kortelių",
     "no_member": "Vartotojas nerastas",
