--- a/src/utils/i18n/translations/lt.json
+++ b/src/utils/i18n/translations/lt.json
@@ -23,7 +23,8 @@
     "updated_contacts": "Kontaktinė informacija pakeista!",
     "is_active": "Aktyvus",
     "is_owner": "Savininkas",
-    "users": "Butų vartotojai",
+    "users": "Butų gyventojai",
+    "users_members": "Buto gyventojo vartotojai",
     "user": "Vartotojas",
     "cards": "Kortelės",
     "card_created": "Kortelė pridėta!",
